--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 25
     defaultConfig {
         applicationId "com.android.jtcode.newjtcode"
         minSdkVersion 14
@@ -19,10 +19,19 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.android.support:appcompat-v7:25.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'com.jaeger.statusbarutil:library:1.4.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation files('libs/jpush-android-3.0.8.jar')
+    implementation files('libs/jcore-android-1.1.6.jar')
+    implementation files('libs/SocialSDK_WeChat_Simplify.jar')
 }
